2007-07-15  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/scale.js: remove the old callback_count
	stuff.  also do more precomputation outside of the animation tick
	callback, and make the animations a little longer (from 250ms to
	400ms).  try to keep mouse events from propagating to the scaled
	windows (which is admitted pretty cool, since the're properly
	transformed and everything), but it doesn't work.

	* compzilla/chrome/skin/compzilla.css: make the backgrounds in
	expose and picker less opaque.  darkening the screen so much
	instantly is very jarring.  use a more subtle darkening.

	also, put a thicker border around the picker, the same color as
	the background of the window.  with the canvas gradient, it
	provides a nice look.

2007-07-15  Chris Toshok  <toshok@ximian.com>

	* compzilla/Makefile.am (content_DATA): add nihanim.js

	* compzilla/chrome/skin/compzilla.css: new style foo.

	* compzilla/chrome/content/start.xul: use the layer background
	hack for expose, since we'll need to change the opacity of the
	selected window to 1.0 when it's highlighted. also load
	nihanim.js.

	* compzilla/chrome/content/scale.js: rework this, getting rid of
	all the jquery animation calls and switching to nih.  also remove
	the multitude of animations we were using.  now everything except
	the window moving happens instantaneously.  no more fading windows
	in/out, it just slows things down.  Also, make sure we don't start
	a new animation before the current one is finished, and provide a
	way to select windows in scaled out mode, and have that focus them
	and trigger a scale in (i.e. make it actually useful).

	* compzilla/chrome/content/picker.js: use the nihanim stuff.

	* compzilla/chrome/content/nihanim.js: abstract out the animation
	crap i wrote in picker.js and put it here.  make it a little more
	generally useful.  now you can hook up several animations (which
	are basically just objects with an updateProgress call) -